test/param/kbrady/paramIntDivZero.good
paramIntDivZero.chpl:2: error: param divide by zero
