test/param/kbrady/paramIntDivZero.chpl
param zero = 0;
param bad = 6/zero;
writeln(bad);
